added docs for users endpoints
